--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^0.26.1",
     "prismjs": "^1.27.0",
+    "splitpanes": "^3.1.0",
     "vue": "^3.2.25",
     "vue-prism-component": "^2.0.0",
     "vue-router": "^4.0.14",
