--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "splitpanes": "^3.1.0",
     "vue": "^3.2.25",
     "vue-prism-component": "^2.0.0",
+    "vue-prism-editor": "^2.0.0-alpha.2",
     "vue-router": "^4.0.14",
     "vuex": "^4.0.2"
   },
