--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "ace-builds": "^1.4.14",
     "axios": "^0.26.1",
+    "nanoid": "^3.3.4",
     "prismjs": "^1.27.0",
     "splitpanes": "^3.1.0",
     "vue": "^3.2.25",
