--- a/package.json
+++ b/package.json
@@ -12,19 +12,21 @@
     "ace-builds": "^1.4.14",
     "axios": "^0.26.1",
     "nanoid": "^3.3.4",
+    "pinia": "^2.0.27",
     "prismjs": "^1.27.0",
     "splitpanes": "^3.1.0",
     "vue": "^3.2.25",
     "vue-prism-component": "^2.0.0",
     "vue-router": "^4.0.14",
-    "vue3-ace-editor": "^2.2.2",
-    "vuex": "^4.0.2"
+    "vue3-ace-editor": "^2.2.2"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@vitejs/plugin-vue": "^2.2.0",
     "autoprefixer": "^10.4.4",
     "postcss": "^8.4.12",
     "tailwindcss": "^3.0.23",
+    "typescript": "^4.9.4",
     "vite": "^2.8.0"
   }
 }
