--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "serve": "vite preview",
     "build": "vite build",
     "dev": "vite",
+    "test:unit": "vitest --environment jsdom --root src/",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -22,12 +23,16 @@
     "vuex": "^4.1.0"
   },
   "devDependencies": {
+    "@pinia/testing": "^0.0.14",
     "@types/axios": "^0.14.0",
     "@vitejs/plugin-vue": "^2.2.0",
+    "@vue/test-utils": "^2.2.6",
     "autoprefixer": "^10.4.4",
+    "jsdom": "^20.0.3",
     "postcss": "^8.4.12",
     "tailwindcss": "^3.0.23",
     "typescript": "^4.9.4",
-    "vite": "^2.8.0"
+    "vite": "^2.8.0",
+    "vitest": "^0.25.6"
   }
 }
